# metaru

./: .gitignore  10k-native-flamegraph.html  BUILD.md  CMakeLists.mock.txt  CMakeLists.txt  README.md  build.sh  build_mock.sh  performance_summary.md  run_test.sh  run_test_simple.sh
include/: account_witness.h  besu_evm.h  jni_helpers.h  message_frame.h  message_frame_memory.h  native_message_frame.h  operation.h  operation_tracer_jni.h  storage_memory.h  tracer_callback.h  types.h
src/: evm.cpp  evm_jumptable.cpp  evm_optimized.cpp  mock_evm_with_tracer.cpp  mock_native_evm.cpp
src/types/: uint256.cpp
zisk_demo/: README.md  block_execution_demo.cpp  block_execution_demo_baremetal.cpp  block_execution_demo_riscv.cpp  build-newlib.sh  link.ld  start.S  syscalls.c
